--- a/ourprofile.html
+++ b/ourprofile.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a  href="./browndoors.HTML">
+            <a  href="./index.html">
             <img src=".\content\BD logo.png" alt="browndoors logo" style="max-width: 156px;"/>
         </a>
         </div>
