--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <div class="container">
-            <h1>Brown Doors L.T.D.</h1>
+            <div class="logo-container">
+                <a href="index.html" class="logo">
+                    <img src="./content/BD logo.png" alt="Browndoors Construction Logo">
+                </a>
+                <h1>Browndoors Construction</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
