--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Browndoors Construction</title>
+    <title>About Us - Brown Doors L.T.D.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Browndoors Construction</h1>
+            <h1>Brown Doors L.T.D.</h1>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
@@ -25,15 +25,38 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>Browndoors Construction is a leading construction company specializing in residential and commercial projects. With over 20 years of experience, we have built a reputation for delivering high-quality workmanship and exceptional customer service.</p>
-            <p>Our team of skilled professionals includes architects, engineers, project managers, and construction workers who are dedicated to turning your vision into reality. Whether you need a new custom home, office building, renovation, or remodeling services, we have the expertise to handle projects of any size and complexity.</p>
-            <p>We prioritize safety, efficiency, and sustainability in all our projects, ensuring that we not only meet but exceed our clients' expectations. We believe in transparent communication, timely delivery, and exceeding industry standards to deliver outstanding results.</p>
+            <P>We are pleased to introduce to you our firm. the Company which is solely indigenous and registered with the Corporate affairs Commission with Certificate NO.928470 of 31st july, 1995. Our sole objective is to render specialized and professional service in the area of Aluminum fabrication and installation to a diverse range of clients. Our experience covers the entire Spectrum Of Fabrication,Installation and Maintenance of:<br>
+                <ol>
+                    <li>Aluminum Doors</li>
+                    <li>Aluminum Windows</li>
+                    <li>Office partitioning</li>
+                    <li>Suspended Ceilings</li>
+                    <li>Aluminum Roofing</li>
+                    <li>Window Blinds</li>
+                    <li>Steel Works</li>
+                </ol>
+                In the past Ten years, we have handled projects and specialist Aluminum Works for different organizations. Over the years, we have grown a list of reputable entities and individual in our client profile, this includes among others the following:
+                <ol>
+                    <li>Partitioning/Curtain walling, cashier cubicle and window/door for the new Zenith Bank Plc, Ejigbo Branch.(Sub-contractor by San's Frontiers Ltd).</li>
+                    <li>Internal Aluminum Partitioning, Window and Door for the recently Commissioned Zenith Banks Plc, Along Ozumba Mbadiwe Road.(Sub-contracted by Marble Concept).</li>
+                    <li>Partitioning of cashier's cubicles for Cash Adoption, Zenith Bank Plc, Airport road 1, Ogundu branch and Ikorodu branch, Allen branch.</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+            </P>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Browndoors Construction. All rights reserved.</p>
+            <p>&copy; 2024 Brown Doors L.T.D. All rights reserved.</p>
         </div>
     </footer>
 </body>
