--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Browndoors Construction</title>
+    <title>Contact Us - Brown Doors L.T.D.</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Browndoors Construction</h1>
+            <h1>Brown Doors L.T.D.</h1>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
@@ -40,14 +40,14 @@
 
             <div class="contact-info">
                 <h3>Our Office</h3>
-                <p>1234 Construction Lane</p>
-                <p>Buildtown, BT 56789</p>
+                <p>24 Onipede Street, Lawanson, surulere,</p>
+                <p>Lagos, Nigeria.</p>
 
                 <h3>Phone</h3>
-                <p>(123) 456-7890</p>
+                <p>+2648023128174, 08033255019.</p>
 
                 <h3>Email</h3>
-                <p>info@browndoors.com</p>
+                <p>Browndoors2004@gmail.com</p>
 
                 <h3>Business Hours</h3>
                 <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
@@ -59,7 +59,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Browndoors Construction. All rights reserved.</p>
+            <p>&copy; 2024 Browndoors L.T.D. All rights reserved.</p>
         </div>
     </footer>
 </body>
