--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html" class="logo">
                     <img src="./content/BD logo.png" alt="Browndoors Construction Logo">
                 </a>
-                <h1>Browndoors Construction</h1>
+                <h1>Brown Doors L.T.D.</h1>
             </div>
             <nav>
                 <ul>
@@ -87,7 +87,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Browndoors Construction. All rights reserved.</p>
+            <p>&copy; 2024 Brown Doors L.T.D. All rights reserved.</p>
         </div>
     </footer>
 </body>
