--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="about">
         <div class="container">
             <h2>About Us</h2>
-            <p>Browndoors Construction has been providing top-quality construction services for over 20 years. Our team of experienced professionals is dedicated to making your vision a reality.</p>
+            <p>Browndoors Construction has been providing top-quality construction services for over 29 years. Our team of experienced professionals is dedicated to making your vision a reality.</p>
         </div>
     </section>
 
@@ -46,6 +46,7 @@
         <div class="container">
             <h2>Our Services</h2>
             <ul>
+                <li>Aluminum Works</li>
                 <li>Residential Construction</li>
                 <li>Commercial Construction</li>
                 <li>Renovations and Remodeling</li>
