--- a/services.html
+++ b/services.html
@@ -9,14 +9,19 @@
 <body>
     <header>
         <div class="container">
-            <h1>Browndoors Construction</h1>
+            <div class="logo-container">
+                <a href="index.html" class="logo">
+                    <img src="./content/BD logo.png" alt="Browndoors Construction Logo">
+                </a>
+                <h1>Brown Doors L.T.D.</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,6 +30,10 @@
     <section id="services">
         <div class="container">
             <h2>Our Services</h2>
+            <div class="service-item">
+                <h3>Aluminum Works</h3>
+                <p>Our sole objective is to render specialized and professional service in the area of Aluminum fabrication and installation to a diverse range of clients. Our experience covers the entire Spectrum Of Fabrication,Installation and Maintenance of:- Aluminum Doors, Aluminum Windows, Office partitioning, Suspended Ceilings, Aluminum Roofing, Window Blinds, Steel Works .etc.</p>
+            </div>
             <div class="service-item">
                 <h3>Residential Construction</h3>
                 <p>We offer comprehensive residential construction services, from custom homes to renovations. Our team is dedicated to creating your perfect living space.</p>
