--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,19 @@
 <body>
     <header>
         <div class="container">
-            <h1>Brown Doors L.T.D.</h1>
+            <div class="logo-container">
+                <a href="index.html" class="logo">
+                    <img src="./content/BD logo.png" alt="Browndoors Construction Logo">
+                </a>
+                <h1>Brown Doors L.T.D.</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./services.html">Services</a></li>
+                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
